--- a/index.html
+++ b/index.html
@@ -5,173 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <link id="styleMode" rel="stylesheet" href="./styleMode/ligthMode.css">
     <title>Document</title>
 </head>
 <body id="body">
     <header>
-        <h1 id="angel">ANGEL MUGRACCI</h1>
+        <button id="mode" onclick="changeMode()">Mode</button>
+        <h1 id="angel"> ANGEL <span id="angelSpan">MUGRACCI</span> </h1>
     </header>
     <div class="containerSpan" id="container">
-<span style="--i:11"></span>
-<span style="--i:21"></span>
-<span style="--i:15"></span>
-<span style="--i:08"></span>
-<span style="--i:10"></span>
-<span style="--i:23"></span>
-<span style="--i:21"></span>
-<span style="--i:11"></span>
-<span style="--i:24"></span>
-<span style="--i:09"></span>
-<span style="--i:23"></span>
-<span style="--i:08"></span>
-<span style="--i:09"></span>
-<span style="--i:11"></span>
-<span style="--i:21"></span>
-<span style="--i:15"></span>
-<span style="--i:18"></span>
-<span style="--i:10"></span>
-<span style="--i:23"></span>
-<span style="--i:21"></span>
-<span style="--i:11"></span>
-<span style="--i:24"></span>
-<span style="--i:09"></span>
-<span style="--i:23"></span>
-<span style="--i:08"></span>
-<span style="--i:09"></span>
-<span style="--i:11"></span>
-<span style="--i:21"></span>
-<span style="--i:15"></span>
-<span style="--i:18"></span>
-<span style="--i:10"></span>
-<span style="--i:23"></span>
-<span style="--i:21"></span>
-<span style="--i:11"></span>
-<span style="--i:24"></span>
-<span style="--i:09"></span>
-<span style="--i:23"></span>
-<span style="--i:08"></span>
-<span style="--i:09"></span>
-<span style="--i:11"></span>
-<span style="--i:21"></span>
-<span style="--i:15"></span>
-<span style="--i:08"></span>
-<span style="--i:10"></span>
-<span style="--i:23"></span>
-<span style="--i:21"></span>
-<span style="--i:11"></span>
-<span style="--i:24"></span>
-<span style="--i:09"></span>
-<span style="--i:23"></span>
-<span style="--i:08"></span>
-<span style="--i:09"></span>
-<span style="--i:11"></span>
-<span style="--i:21"></span>
-<span style="--i:15"></span>
-<span style="--i:18"></span>
-<span style="--i:10"></span>
-<span style="--i:23"></span>
-<span style="--i:21"></span>
-<span style="--i:11"></span>
-<span style="--i:24"></span>
-<span style="--i:09"></span>
-<span style="--i:23"></span>
-<span style="--i:08"></span>
-<span style="--i:09"></span>
-<span style="--i:11"></span>
-<span style="--i:21"></span>
-<span style="--i:15"></span>
-<span style="--i:18"></span>
-<span style="--i:10"></span>
-<span style="--i:23"></span>
-<span style="--i:21"></span>
-<span style="--i:11"></span>
-<span style="--i:24"></span>
-<span style="--i:09"></span>
-<span style="--i:23"></span>
-<span style="--i:08"></span>
-<span style="--i:09"></span>
-<span style="--i:11"></span>
-<span style="--i:21"></span>
-<span style="--i:15"></span>
-<span style="--i:08"></span>
-<span style="--i:10"></span>
-<span style="--i:23"></span>
-<span style="--i:21"></span>
-<span style="--i:11"></span>
-<span style="--i:24"></span>
-<span style="--i:09"></span>
-<span style="--i:23"></span>
-<span style="--i:08"></span>
-<span style="--i:09"></span>
-<span style="--i:11"></span>
-<span style="--i:21"></span>
-<span style="--i:15"></span>
-<span style="--i:18"></span>
-<span style="--i:10"></span>
-<span style="--i:23"></span>
-<span style="--i:21"></span>
-<span style="--i:11"></span>
-<span style="--i:24"></span>
-<span style="--i:09"></span>
-<span style="--i:23"></span>
-<span style="--i:08"></span>
-<span style="--i:09"></span>
-<span style="--i:11"></span>
-<span style="--i:21"></span>
-<span style="--i:15"></span>
-<span style="--i:18"></span>
-<span style="--i:10"></span>
-<span style="--i:23"></span>
-<span style="--i:21"></span>
-<span style="--i:11"></span>
-<span style="--i:24"></span>
-<span style="--i:09"></span>
-<span style="--i:23"></span>
-<span style="--i:08"></span>
-<span style="--i:09"></span><span style="--i:11"></span>
-<span style="--i:21"></span>
-<span style="--i:15"></span>
-<span style="--i:08"></span>
-<span style="--i:10"></span>
-<span style="--i:23"></span>
-<span style="--i:21"></span>
-<span style="--i:11"></span>
-<span style="--i:24"></span>
-<span style="--i:09"></span>
-<span style="--i:23"></span>
-<span style="--i:08"></span>
-<span style="--i:09"></span>
-<span style="--i:11"></span>
-<span style="--i:21"></span>
-<span style="--i:15"></span>
-<span style="--i:18"></span>
-<span style="--i:10"></span>
-<span style="--i:23"></span>
-<span style="--i:21"></span>
-<span style="--i:11"></span>
-<span style="--i:24"></span>
-<span style="--i:09"></span>
-<span style="--i:23"></span>
-<span style="--i:08"></span>
-<span style="--i:09"></span>
-<span style="--i:11"></span>
-<span style="--i:21"></span>
-<span style="--i:15"></span>
-<span style="--i:18"></span>
-<span style="--i:10"></span>
-<span style="--i:23"></span>
-<span style="--i:21"></span>
-<span style="--i:11"></span>
-<span style="--i:24"></span>
-<span style="--i:09"></span>
-<span style="--i:23"></span>
-<span style="--i:08"></span>
-<span style="--i:09"></span>
     </div>
-    
-      
-
-
+   
     <script src="./script.js"></script>
+    <script src="./styleMode/mode.js"></script>
 </body>
 </html>
